Cleaned up files for sharing in class.

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -1,7 +1,9 @@
 <%- include("partials/header", { title }) %>
 
-<h1>Admin Page</h1>
-<p>You are logged in and accessing admin content</p>
-<p>This is only accessible to admins</p>
+<div>
+    <h1>Admin Page</h1>
+    <p>You are logged in and accessing admin content</p>
+    <p>This is only accessible to admins</p>
+</div>
 
 <%- include("partials/footer") %>
