--- a/views/user.ejs
+++ b/views/user.ejs
@@ -1,7 +1,9 @@
 <%- include("partials/header", { title }) %>
 
-<h1>User Page</h1>
-<p>You are logged in and accessing user content</p>
-<p>Good job! :)</p>
+<div>
+    <h1>User Page</h1>
+    <p>You are logged in and accessing user content</p>
+    <p>Good job! :)</p>
+</div>
 
 <%- include("partials/footer") %>
