--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,11 +1,13 @@
 <%- include("partials/header", { title }) %>
 
-<h1>Something went wrong!</h1>
-<p>Error: <%= status %></p>
-<p>Message: <%= message %></p>
-
-<p>
-    <a href="/">Go back to the home page</a>
-</p>
+<div>
+    <h1>Something went wrong!</h1>
+    <p>Error: <%= status %></p>
+    <p>Message: <%= message %></p>
+    
+    <p>
+        <a href="/">Go back to the home page</a>
+    </p>
+</div>
 
 <%- include("partials/footer") %>
