--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,6 +13,14 @@
 
                 <ul class="nav">
                     <li class="nav-item">
+                        <a href="/user" class="nav-link">User Page</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a href="/admin" class="nav-link">Admin Page</a>
+                    </li>
+
+                    <li class="nav-item">
                         <a href="/login" class="nav-link">Login</a>
                     </li>
 
