--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,8 +1,8 @@
 <%- include("partials/header", { title }) %>
 
-<% if (error) { %>
+<% if (errors) { %>
     <div class="error">
-        <p><%= error %></p>
+        <p><%= errors %></p>
     </div>
 <% } %>
 
